@@ -3789,11 +3789,19 @@ ZEND_METHOD(reflection_property, getDeclaringClass)
 {
 	reflection_object *intern;
 	property_reference *ref;
+	zend_class_entry *tmp_ce, *ce;
+	zend_property_info *tmp_info;
 
 	METHOD_NOTSTATIC_NUMPARAMS(reflection_property_ptr, 0);
 	GET_REFLECTION_OBJECT_PTR(ref);
 
-	zend_reflection_class_factory(ref->ce, return_value TSRMLS_CC);
+	ce = tmp_ce = ref->ce;
+	while (tmp_ce && zend_hash_find(&tmp_ce->properties_info, ref->prop->name, ref->prop->name_length + 1, (void **) &tmp_info) == SUCCESS) {
+		ce = tmp_ce;
+                tmp_ce = tmp_ce->parent;
+	}
+
+	zend_reflection_class_factory(ce, return_value TSRMLS_CC);
 }
 
 /* {{{ proto public string ReflectionProperty::getDocComment()
